--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 .idea
 .project
 .classpath
-persistence.xml
-db.properties
+src/main/resources/db.properties
+src/main/resources/META-INF/persistence.xml
 pom.xml
