insertion en BDD allergen et additive

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,3 +1,9 @@
 .idea
 .project
 .classpath
+src/main/resources/db.properties
+/target/
+
+src/main/resources/db.propertiessrc/main/resources/META-INF/persistence.xml
+pom.xml
+/src/main/resources/
