--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
 .idea
 .project
 .classpath
-src/main/resources/db.properties
 /target/
 
-src/main/resources/db.propertiessrc/main/resources/META-INF/persistence.xml
+src/main/resources/db.properties
+src/main/resources/META-INF/persistence.xml
 pom.xml
-/src/main/resources/
